# tsc-predict

./: .gitignore  CLAUDE.md  README.md  install_uv.sh  pyproject.toml
experiments/: README.md
experiments/00_example/: run.py
experiments/01_winogrande/: README.md  experiment.md  observations.md  plot.py  run.py
experiments/02_winogrande_predict/: README.md  plot.py  run.py
experiments/03_winogrande_finetune/: README.md  plot.py  run.py
experiments/04_winogrande_set/: README.md  plot.py
experiments/05_mmlu/: README.md  plot.py  run.py
experiments/06_mmlu_set/: README.md  plot.py
slurm/: run_array.sbatch  run_gpu.sbatch  run_preempt.sbatch
src/allegro/: example.py  tracking.py
src/hubble/: PAPER.md  data.py  eval.py  features.py  probes.py
writeups/: 01_formulation.md  02_set_level_prediction.md  v1.md
